# PersonalizedMedicine

./: BPE_tokenizer-trained.json  CesarAttempt0.ipynb  Classic ML Doc2Vec.ipynb  Classical ML using text embeddings.ipynb  Classical_Machine_Learning_Models.ipynb  Classical_machine_learning_algo.ipynb  Classical_machine_learning_algo1.ipynb  Classifier_AUCs.xlsx  Classify_w_Keras.ipynb  Classify_w_Keras_BoW.ipynb  Classify_w_Keras_Embeddings.ipynb  EDA, Cleaning, Embedding.ipynb  EDA.ipynb  EDAv2.ipynb  LICENSE  New_try_Shashi_ Abbreviate_data_5_25_2021.ipynb  README.md  Shashi_personalized_medicine_mut_var_1.0  UNI_tokenizer-trained.json  WLV_tokenizer-trained.json  WPC_tokenizer-trained.json  eda.ipynb  plot_classifier_aucs.ipynb  pyproject.toml  some tryings of imbalanced classification.ipynb
Archived/: Classical_Machine_Learning_Models.ipynb  Classical_machine_learning_algo.ipynb  Shashi_personalized_medicine_mut_var_1.0.ipynb
