[tool.poetry]
name = "PersonalizedMedicine"
version = "0.1.0"
description = "a genetic mutation labeling classifier to speed up physician workflows"
authors = ["Kenny Chou <kennethfchou@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "personalized_medicine"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
ipykernel = "^6.19.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scipy = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
